--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -798,18 +798,18 @@
  	 	 	 	"eng": "REDACTED"
  	 	 	},
  	 	 	"decoration1": {
- 	 	 	 	"trans": "비밀의",
+ 	 	 	 	"trans": "온라인 주민등록증",
  	 	 	 	"eng": "confidential"
  	 	 	},
  	 	 	"decoration2": {
- 	 	 	 	"trans": "SLPD의 속성",
+ 	 	 	 	"trans": "SLPD 부처에서 발행함",
  	 	 	 	"eng": "Property of SLPD"
  	 	 	},
  	 	 	"accountCreated": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "${date}에서 생성 된 파일",
+ 	 	 	 	"trans": "파일 생성일: ${date}",
  	 	 	 	"eng": "file created at ${date}"
  	 	 	},
  	 	 	"numOfMember": {
@@ -826,11 +826,11 @@
  	 	 	 	 	"eng": "Kick"
  	 	 	 	},
  	 	 	 	"editPermissions": {
- 	 	 	 	 	"trans": "권한들",
+ 	 	 	 	 	"trans": "권한",
  	 	 	 	 	"eng": "Permissions"
  	 	 	 	},
  	 	 	 	"transferLeadership": {
- 	 	 	 	 	"trans": "리더 권한 넘기기",
+ 	 	 	 	 	"trans": "리더 넘기기",
  	 	 	 	 	"eng": "Transfer Leadership"
  	 	 	 	}
  	 	 	},
@@ -852,15 +852,15 @@
  	 	 	 	 	"eng": "Invite to Gang"
  	 	 	 	},
  	 	 	 	"addToFriend": {
- 	 	 	 	 	"trans": "친구 리스트에 추가하기",
+ 	 	 	 	 	"trans": "친구 추가하기",
  	 	 	 	 	"eng": "add to Friend List"
  	 	 	 	},
  	 	 	 	"removeFromFriend": {
- 	 	 	 	 	"trans": "친구 리스트에서 삭제하기",
+ 	 	 	 	 	"trans": "친구 삭제하기",
  	 	 	 	 	"eng": "Remove from Friend List"
  	 	 	 	},
  	 	 	 	"giveStreetCred": {
- 	 	 	 	 	"trans": "명성 올려주기",
+ 	 	 	 	 	"trans": "명성 주기",
  	 	 	 	 	"eng": "Give Street Cred"
  	 	 	 	}
  	 	 	},
@@ -1662,7 +1662,7 @@
  	 	 	 	"eng": "Next Login Period"
  	 	 	},
  	 	 	"day": {
- 	 	 	 	"trans": "낮",
+ 	 	 	 	"trans": "일일 보상",
  	 	 	 	"eng": "Day"
  	 	 	},
  	 	 	"canClaim": {
