--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -1304,11 +1304,11 @@
  	 	 	 	"trans": "UI 스케일",
  	 	 	 	"eng": "UI Scale",
  	 	 	 	"normal": {
- 	 	 	 	 	"trans": "정상",
+ 	 	 	 	 	"trans": "보통",
  	 	 	 	 	"eng": "Normal"
  	 	 	 	},
  	 	 	 	"small": {
- 	 	 	 	 	"trans": "작은",
+ 	 	 	 	 	"trans": "작음",
  	 	 	 	 	"eng": "Small"
  	 	 	 	}
  	 	 	},
@@ -1662,7 +1662,7 @@
  	 	 	 	"eng": "Next Login Period"
  	 	 	},
  	 	 	"day": {
- 	 	 	 	"trans": "일일 보상",
+ 	 	 	 	"trans": "보상",
  	 	 	 	"eng": "Day"
  	 	 	},
  	 	 	"canClaim": {
