--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -4337,7 +4337,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"name": {
- 	 	 	 	"trans": "Terminale",
+ 	 	 	 	"trans": "Terminal",
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
@@ -4370,7 +4370,7 @@
  	 	"bank": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Bonjour et bienvenue ! Que puis-je faire pour toi ? Stocker ou retirer ?"
+ 	 	 	 	 	"Bienvenue à la banque d'Arasaka ! Que puis-je faire pour vous ?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome. What can I store for you?"
@@ -4406,7 +4406,7 @@
  	 	"storageMerchant": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hé gamin ! Je m'appelle Lee !! En échange de tes pièces technologiques, je peux t'aider à augmenter ta capacité de stockage."
+ 	 	 	 	 	"Hé gamin ! Je m'appelle Lee !! Avec toujours plus de pièces technologiques, je peux concevoir des objets de stockage de plus en plus performants."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, I'm Lee, You know, you don't have to carry everything you own in your pockets."
@@ -4417,7 +4417,7 @@
  	 	 	 	"eng": "Lee's Trading Post"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Une boutique familiale te permettant de faire du commerce avec les débris des objets recyclés.",
+ 	 	 	 	"trans": "Une boutique familiale te permettant de donner une seconde vie aux débris des objets recyclés.",
  	 	 	 	"eng": "A family run trading shop that lets you trade with what they have found while scavenging"
  	 	 	},
  	 	 	"canAccessError": {
