--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -400,12 +400,12 @@
  	 	"equipment": {
  	 	 	"lowPrintLevelTip": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "クラフトスキルレベルが足りません",
+ 	 	 	 	 	"trans": "プリントレベルが足りません",
  	 	 	 	 	"eng": "Low Printing Rank"
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "クラフトスキルを上げるとより強力な武器を作成できます. スキルレベルはキャッシュをプリントすることで上がります.",
+ 	 	 	 	"trans": "プリントスキルを上げるとより強力な武器を作成できます. スキルレベルはキャッシュをプリントすることで上がります.",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
@@ -497,7 +497,7 @@
  	 	 	 	 	 	"timeSkipItemName",
  	 	 	 	 	 	"itemSkipMinutes"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${timeSkipItemName}を1つ使用し, ${itemSkipMinutes}をスキップします.",
+ 	 	 	 	 	"trans": "${timeSkipItemName}を1つ使用し, ${itemSkipMinutes}分短縮します.",
  	 	 	 	 	"eng": "Use one of your ${timeSkipItemName} to skip ${itemSkipMinutes} minutes"
  	 	 	 	}
  	 	 	},
@@ -507,7 +507,7 @@
  	 	 	 	 	"eng": "Confirm use skip?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "グローバルスキップはAFKタスクを実行するすべてのプレーヤーの待ち時間をスキップします",
+ 	 	 	 	 	"trans": "AFKタスクを実行中の全プレイヤーの待ち時間を短縮します",
  	 	 	 	 	"eng": "Global Skip will skip the waiting time for all players performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -731,11 +731,11 @@
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"level"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "クラフトレベル${level}",
+ 	 	 	 	 	 	"trans": "プリントレベル${level}",
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "装備のプリントはあなたのクラフトスキルレベルに基づいています. たくさんのアイテムをプリントし, スキルレベルを上げましょう",
+ 	 	 	 	 	 	"trans": "装備のプリントはあなたのプリントレベルに基づいています. たくさんのアイテムをプリントし, スキルレベルを上げましょう",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -809,7 +809,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "${date}で作成されたファイル",
+ 	 	 	 	"trans": "${date}に作成されたアカウント",
  	 	 	 	"eng": "file created at ${date}"
  	 	 	},
  	 	 	"numOfMember": {
@@ -965,7 +965,7 @@
  	 	 	 	"eng": "Purchase"
  	 	 	},
  	 	 	"remove": {
- 	 	 	 	"trans": "削除",
+ 	 	 	 	"trans": "インベントリに戻す",
  	 	 	 	"eng": "Remove"
  	 	 	},
  	 	 	"stall": {
@@ -1037,11 +1037,11 @@
  	 	 	 	},
  	 	 	 	"printingTooLow": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "クラフトスキルを上げる",
+ 	 	 	 	 	 	"trans": "プリントレベルを上げる",
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "クラフトスキルレベルによって, 制作される装備のレベルが決まります. ブラックマーケットでのプリント＆販売でExpを得ましょう",
+ 	 	 	 	 	 	"trans": "プリントスキルのレベルによって, 制作される装備のレベルが決まります. ブラックマーケットでのプリント＆売却でExpを得ましょう",
  	 	 	 	 	 	"eng": "Printing Rank determines the level of item you print. Gain printing exp by print & sell in Black Market"
  	 	 	 	 	}
  	 	 	 	},
@@ -1074,7 +1074,7 @@
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "AIコアを所持していますね？ それを使って, 適切なレベルのエリアでAFKの自動レベリングが行えますよ",
+ 	 	 	 	 	 	"trans": "所持している「AIコア」を消費することで, 駅エリアでのAFKタスクで自動レベリングが行えます.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
@@ -1106,7 +1106,7 @@
  	 	 	 	 	 	"eng": "Cyberspace hacking in progress"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "全プレーヤーへのバフの付与のため, 他のネットランナーと力を合わせてSLデータ防壁を突破せよ",
+ 	 	 	 	 	 	"trans": "全プレイヤーへのバフの付与のため, 他のネットランナーと力を合わせてSLデータ防壁を突破せよ",
  	 	 	 	 	 	"eng": "Join forces with other Netrunners to breach the SL-Data Fortress to grant all players with buff"
  	 	 	 	 	}
  	 	 	 	},
@@ -1342,7 +1342,7 @@
  	 	"richInput": {
  	 	 	"searchOfflineSearchbox": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "すべてのプレーヤーから検索する",
+ 	 	 	 	 	"trans": "すべてのプレイヤーから検索",
  	 	 	 	 	"eng": "Search all players"
  	 	 	 	}
  	 	 	}
@@ -1585,12 +1585,12 @@
  	 	 	 	 	"eng": "View Profile"
  	 	 	 	},
  	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "キックプレーヤー",
+ 	 	 	 	 	"trans": "除名する",
  	 	 	 	 	"eng": "kick player"
  	 	 	 	}
  	 	 	},
  	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "本当にこのプレイヤーをギャングから追放しますか？",
+ 	 	 	 	"trans": "本当にこのプレイヤーをギャングから除名しますか？",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
  	 	 	},
  	 	 	"memberContribution": {
@@ -1704,7 +1704,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerCount"
  	 	 	 	],
- 	 	 	 	"trans": "${playerCount}人のプレーヤーが接続されています",
+ 	 	 	 	"trans": "${playerCount}人が参加中",
  	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
@@ -1866,7 +1866,7 @@
  	 	 	 	"eng": "Equipment Cache not found"
  	 	 	},
  	 	 	"subTitle": {
- 	 	 	 	"trans": "倒した敵やダンジョンからキャッシュを集め, 新しい武器や防具をクラフトしましょう",
+ 	 	 	 	"trans": "倒した敵やダンジョンからキャッシュを集め, 新しい武器や防具をプリントしましょう",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
  	 	 	}
  	 	},
@@ -2635,11 +2635,11 @@
  	 	},
  	 	"newbie3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "クラフトスキル3に達する",
+ 	 	 	 	"trans": "プリントレベル3に達する",
  	 	 	 	"eng": "Reach printing rank 3"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "キャッシュからクラフトするアイテムのレベルは, クラフトスキルによって決まります. \r\n         クラフトスキルのレベルを上げれば, より高いレベルのアイテムを作成できるということです. \r\n        \r\n         [セントラルハブ]にある分子合成式3Dプリンタでキャッシュをプリントして,クラフトスキルをレベルアップさせましょう.",
+ 	 	 	 	"trans": "キャッシュからプリントする装備のレベルは, プリントレベルによって決まります. \r\n         プリントレベルを上げて, より高いレベルの装備を作成しましょう. \r\n        \r\n         [セントラルハブ]にある分子合成式3Dプリンタでキャッシュをプリントして,プリントスキルをレベルアップさせましょう.",
  	 	 	 	"eng": "The level of itemS you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -3328,7 +3328,7 @@
  	 	 	 	"eng": "Tech Scrap"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "分解された機器のスクラップ. これをリバースエンジニアリングすることでクラフトスキルのEXPを得ることができる. \r\n         ジョブハブでリバースエンジニアリングを実行可能.",
+ 	 	 	 	"trans": "分解された機器のスクラップ. これをリバースエンジニアリングすることでプリントスキルのEXPを得ることができる. \r\n         ジョブハブでリバースエンジニアリングを実行可能.",
  	 	 	 	"eng": "Technology scrap from disassembled equipment, this can be reverse engineered to gain printing xp. \r\n        You can perform reverse engineering in the Job Hub."
  	 	 	}
  	 	},
@@ -3496,7 +3496,7 @@
  	 	 	 	"eng": "Degraded Repair drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "旧型の修理用ドローン. 周辺のプレーヤーを修理または治療することができる",
+ 	 	 	 	"trans": "旧型の修理用ドローン. 周辺のプレーヤイを修理または治療することができる",
  	 	 	 	"eng": "Old repair drone, capable of repairing or heal nearby players"
  	 	 	}
  	 	},
@@ -3526,7 +3526,7 @@
  	 	 	 	"eng": "Military Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "近くのプレーヤーを治療するために数千個もの軍用ナノマシンを送り出す",
+ 	 	 	 	"trans": "近くのプレイヤーを治療するために数千個もの軍用ナノマシンを送り出す",
  	 	 	 	"eng": "capable of dispatching thousands of military nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -3536,7 +3536,7 @@
  	 	 	 	"eng": "Advance Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "近くのプレーヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
+ 	 	 	 	"trans": "近くのプレイヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -3546,7 +3546,7 @@
  	 	 	 	"eng": "High Quality Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "近くのプレーヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
+ 	 	 	 	"trans": "近くのプレイヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -3556,7 +3556,7 @@
  	 	 	 	"eng": "Rare Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "近くのプレーヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
+ 	 	 	 	"trans": "近くのプレイヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -3566,7 +3566,7 @@
  	 	 	 	"eng": "Legendary Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "近くのプレーヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
+ 	 	 	 	"trans": "近くのプレイヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -3576,7 +3576,7 @@
  	 	 	 	"eng": "Epic Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "近くのプレーヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
+ 	 	 	 	"trans": "近くのプレイヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -3752,7 +3752,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "装備のアップグレードを補助するように設計された先進的なAIの断片が含まれている. 使用すると${duration}分間, 装備品破壊の発生率が${percent}％低下する（最大${maxStack}回まで重複可）.この効果はすべてのオンラインのプレーヤーに適用される.",
+ 	 	 	 	"trans": "装備のアップグレードを補助するように設計された先進的なAIの断片が含まれている. 使用すると${duration}分間, 装備破壊の発生率が${percent}％低下する（最大${maxStack}回まで重複可）.この効果はオンライン状態の全プレイヤーに適用される.",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
  	 	 	}
  	 	},
@@ -4012,7 +4012,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "${typeName}キャッシュには, 分子合成式3Dプリントに必要な情報が含まれています. \r\n                     [セントラルハブ]で[分子合成式3Dプリンタ]で${typeName}を作成できます. \r\n                    \r\n                     PRO TIP：プリンタから得られるアイテムのレベルはクラフトスキルに依存する. \r\n                     [ゴミみたいな]ものから先にプリントしていこう. コストをかけずにクラフトスキルを上げることができる/",
+ 	 	 	 	"trans": "${typeName}キャッシュには, 分子合成式3Dプリントに必要な情報が含まれています. \r\n                     [セントラルハブ]の[分子合成式3Dプリンタ]で${typeName}を作成できます. \r\n                    \r\n                     PRO TIP：プリンタから得られる装備のレベルは, プリントスキルのレベルに依存します. \r\n                     [ゴミみたいな]ものから先にプリントしていこう. コストをかけずにクラフトスキルを上げることができる/",
  	 	 	 	"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
  	 	 	}
  	 	}
@@ -4026,7 +4026,7 @@
  	 	},
  	 	"print": {
  	 	 	"name": {
- 	 	 	 	"trans": "クラフトスキル",
+ 	 	 	 	"trans": "プリントスキル",
  	 	 	 	"eng": "printing rank"
  	 	 	}
  	 	},
@@ -4389,7 +4389,7 @@
  	 	 	 	"eng": "Molecular 3d Printer"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "集めたキャッシュを消費して, 新たな装備品をクラフトできます",
+ 	 	 	 	"trans": "集めたキャッシュを使って, 新たな装備品を3Dプリントできます",
  	 	 	 	"eng": "You can use your Cache to print new equipment here"
  	 	 	}
  	 	},
@@ -4687,7 +4687,7 @@
  	 	 	 	"eng": "work in printing factory"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "テックスクラップを消費せず, クラフトスキルを向上させることができます.",
+ 	 	 	 	"trans": "テックスクラップを消費せず, プリントレベルを上げることができます.",
  	 	 	 	"eng": "Improve Printing Rank without sacrificing tech scrap, this may help to increase the level of your prints."
  	 	 	}
  	 	},
@@ -4717,7 +4717,7 @@
  	 	 	 	"eng": "Reverse Engineer Scraps"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "テックスクラップをリバースエンジニアリングすることでクラフトスキルを向上させましょう. \r\n         テックスクラップを消費します.",
+ 	 	 	 	"trans": "テックスクラップをリバースエンジニアリングして, プリントスキルを向上させましょう. \r\n         1回につき1つのテックスクラップを消費します.",
  	 	 	 	"eng": "Reverse engineer tech scrap to improve your Print Rank. \r\n        You’ll need to sacrifice some of your tech scrap."
  	 	 	}
  	 	},
@@ -4876,7 +4876,7 @@
  	 	 	},
  	 	 	"molecularPrint": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "装備のクラフト",
+ 	 	 	 	 	"trans": "装備のプリント",
  	 	 	 	 	"eng": "Print equipment"
  	 	 	 	},
  	 	 	 	"description": {
@@ -4920,7 +4920,7 @@
  	 	 	 	 	"eng": "Clear dungeon with friends"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "1人以上のプレーヤーと一緒にダンジョンをクリアする",
+ 	 	 	 	 	"trans": "他のプレイヤーと一緒にダンジョンをクリアする",
  	 	 	 	 	"eng": "Clear any dungeon with 1 or more players"
  	 	 	 	}
  	 	 	},
@@ -4930,7 +4930,7 @@
  	 	 	 	 	"eng": "Use global chat"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "他のプレイヤーとチャットをする　スパムは許可されていません",
+ 	 	 	 	 	"trans": "他のプレイヤーとチャットをする. スパムは許可されていません",
  	 	 	 	 	"eng": "Chat with other players, spam not allowed"
  	 	 	 	}
  	 	 	},
@@ -5704,14 +5704,14 @@
  	 	},
  	 	"playerSearch": {
  	 	 	"searchPlayerHint": {
- 	 	 	 	"trans": "検索するプレーヤー名を入力してください",
+ 	 	 	 	"trans": "検索するプレイヤー名を入力してください",
  	 	 	 	"eng": "Enter player name to search"
  	 	 	},
  	 	 	"noPlayerFound": {
  	 	 	 	"vars": [
  	 	 	 	 	"search"
  	 	 	 	],
- 	 	 	 	"trans": "\"${search}\"という名前のプレーヤーは見つかりません",
+ 	 	 	 	"trans": "\"${search}\"という名前のプレイヤーは見つかりません",
  	 	 	 	"eng": "No player with named \"${search}\" found"
  	 	 	}
  	 	},
@@ -5767,7 +5767,7 @@
  	 	 	 	 	"eng": "Wow, thanks so much! I'm honored, please make it official by leaving them on our store page :)"
  	 	 	 	},
  	 	 	 	"title2": {
- 	 	 	 	 	"trans": "本当に励みになります！ コミュニティにも, もっとたくさんのプレーヤーが来てくれるようになるでしょう！",
+ 	 	 	 	 	"trans": "本当に励みになります！ レビューのお陰で, コミュニティにもたくさんの人が来てくれると思います！",
  	 	 	 	 	"eng": "Your good review is going to help me much and bring more players into our community!"
  	 	 	 	}
  	 	 	},
