--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -1962,7 +1962,7 @@
  	 	 	 	"eng": "faq"
  	 	 	},
  	 	 	"referral": {
- 	 	 	 	"trans": "紹介",
+ 	 	 	 	"trans": "新規ユーザーへの紹介",
  	 	 	 	"eng": "referral"
  	 	 	},
  	 	 	"equipment": {
@@ -1994,7 +1994,7 @@
  	 	 	 	"eng": "dungeon"
  	 	 	},
  	 	 	"social": {
- 	 	 	 	"trans": "ソーシャル",
+ 	 	 	 	"trans": "ギャング・他プレイヤーとの交流",
  	 	 	 	"eng": "social"
  	 	 	},
  	 	 	"keys": {
@@ -2006,7 +2006,7 @@
  	 	 	 	"eng": "profile"
  	 	 	},
  	 	 	"locations": {
- 	 	 	 	"trans": "シャングリ・ラ",
+ 	 	 	 	"trans": "シャングリ・ラの街について",
  	 	 	 	"eng": "locations"
  	 	 	},
  	 	 	"quests": {
@@ -4077,7 +4077,7 @@
  	 	 	},
  	 	 	"toJob": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "シャングリ・ラ商業地区へ行く",
+ 	 	 	 	 	"trans": "シャングリ・ラ産業地区へ行く",
  	 	 	 	 	"eng": "Go to Shangri-La Commercial Area"
  	 	 	 	},
  	 	 	 	"tut": {
@@ -4104,7 +4104,7 @@
  	 	},
  	 	"job": {
  	 	 	"name": {
- 	 	 	 	"trans": "シャングリ・ラ商業地区",
+ 	 	 	 	"trans": "シャングリ・ラ産業地区",
  	 	 	 	"eng": "Shangri-La Commercial Area"
  	 	 	},
  	 	 	"description": {
