--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -92,7 +92,7 @@
  	 	 	 	"eng": "Next upkeep Date: ${nextUpkeepDate}"
  	 	 	},
  	 	 	"insufficientError": {
- 	 	 	 	"trans": "リソースクリティカル",
+ 	 	 	 	"trans": "必要なリソース",
  	 	 	 	"eng": "resource critical"
  	 	 	},
  	 	 	"insufficientFound": {
@@ -4357,7 +4357,7 @@
  	 	 	 	 	"あたしがキャッシュを受け取って, 代わりにあんたは装備を受け取るってわけ！",
  	 	 	 	 	"新しい装備, 似合ってるよ！",
  	 	 	 	 	"誰かあたしに脚をプリントしてくれたらいいのに...この店の外の世界も見てみたいなぁ",
- 	 	 	 	 	"お客さんのためにいつも銃をプリントしてるけど, 自分用には作らないんだよね. ...あたし専用のフル装備を作って, お客さんに銃で「ごあいさつ」してみるとかどう？ あっはは, なんてね！",
+ 	 	 	 	 	"お客さんのためにいつも銃をプリントしてるけど, 自分用には作らないんだよねぇ. ",
  	 	 	 	 	"イメチェンしたくなったら, いつでもウチにキャッシュを持ってきてね.",
  	 	 	 	 	"いつも思うんだけど, こんなにたくさんのキャッシュを持ってるってことは, 毎日いろんな人たちをボコボコにしてるんだよね？",
  	 	 	 	 	"誰か脚をあたしにプリントしてよ～！ この店から出れないから, お仕事以外にすることないんだよね.",
@@ -4434,8 +4434,8 @@
  	 	 	 	 	"バーでさぁ, 3人も刺し殺してるヤベー奴を見ちゃったことあるんだよね...エンピツで.",
  	 	 	 	 	"バーバ・ヤーガの方かい？ いらっしゃい.",
  	 	 	 	 	"ブギーマン！？ ...なんだ, アンタか. びっくりしたよ",
- 	 	 	 	 	"メイ…いい加減その悪趣味なタトゥーを変えたらどうだい？片想いで相手の名前を入れるなんて……",
- 	 	 	 	 	"メイ、入ってくるときは裏から入ってくれよ.周りの客に聞かれるのはまずいだろう？ほら、彼が見てる."
+ 	 	 	 	 	"メイ…いい加減その悪趣味なタトゥーを変えたらどうだい？ 片想いで相手の名前を入れるなんて……",
+ 	 	 	 	 	"メイ, 入ってくるときは裏から入ってくれよ. 周りの客に聞かれるのはまずいだろう？ ほら, 彼が見てる."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
@@ -4457,7 +4457,7 @@
  	 	 	 	 	"やぁ, 冒険者. 君が見据えているのは, その銃に託した未来かな？ それとも過去？",
  	 	 	 	 	"カギがあれば, どんな駅だってコンテナだってロック解除できるんだ. 最高のツールさ. ま, 仕事終わりの一杯の方が最高だけどね！",
  	 	 	 	 	"全てのカギには, それを使って開けるためのものがあるんだ.",
- 	 	 	 	 	"メイ,君が治安維持部隊の配属になった話は本当かい？……はは、冗談だよ.そこの君、今のは冗談だから気にしないでくれよ！"
+ 	 	 	 	 	"メイ, 君が治安維持部隊の配属になった話は本当かい？……はは, 冗談だよ. そこの君, 今のは冗談だから気にしないでくれよ！"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll help you to progress to the next area!"
@@ -4512,7 +4512,7 @@
  	 	 	 	 	"更衣室はあっちだぜ...",
  	 	 	 	 	"おい, とっとと買い物を済ませてくれ. さっきからトイレに行きたいんだ.",
  	 	 	 	 	"おい, 見てみろ！ 面白いモンを見つけたぜ...",
- 	 	 	 	 	"メイ,お前がそんな軍用品ばっかり持ち込むと周りの客が迷惑だろうが.で、用件は？その武器の持ち主なら心当たりがある.続きは裏で話そう."
+ 	 	 	 	 	"メイ, お前がそんな軍用品ばっかり持ち込むと周りの客が迷惑だろうが. で、用件は？ その武器の持ち主なら心当たりがある. 続きは裏で話そう."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid... Come check out my goods."
@@ -4568,11 +4568,11 @@
  	 	 	 	 	"キャリブレーションは手伝ってやるけど, 事故って装備がぶっ壊れても責任は取らねーぜ.",
  	 	 	 	 	"相手の顔をしっかりと見て話す主義でね. ほら, あたしだけじゃなくウチの愛銃もじっくり見てるぜ. アンタの顔.",
  	 	 	 	 	"今日はツいてる気がする？ そいつぁいいや, そこのマシンで一発運試ししてみなよ.",
- 	 	 	 	 	"どの装備も現品限りってワケさ. キャリブレーションはご自分の責任でよろしく頼むぜ. あん？ 不安だから責任者立ち合いのもとキャリブしたい？ 目の前にいるじゃんか.",
+ 	 	 	 	 	"キャリブレーションはご自分の責任でよろしく頼むぜ. あん？ 不安だから責任者立ち合いのもとキャリブしたい？ 目の前にいるじゃんか.",
  	 	 	 	 	"あたしはカミコ. そこのべっぴんが愛しのマシンのキャリーさ. あー, カノジョちょっと......怒ると手が付けらんないんだよね.",
  	 	 	 	 	"あんたの装備......や, えーと, もっと良くなると思うぜ. 貸してみなよ.",
  	 	 	 	 	"データを解析しなきゃなんで, コアを持ってきてもらってからキャリブレーションできるようになるまでには時間がかかるぜ.",
- 	 	 	 	 	"キャリブレーションコアをマシンに入れたら, しばらく...あーっと, 30分ぐらい待たなきゃなんだよね. そこでずっと待っててもいいけど, 適当にその辺でもブラついといてくれた方が, あたしとしてもありがたいぜ.",
+ 	 	 	 	 	"キャリブレーションコアをマシンに入れたら, しばらく...あーっと, 具体的には30分ぐらい, 待ってもらう必要があるんだ.",
  	 	 	 	 	"ウチじゃあキャリブレーションコアは扱ってないんだ. こっちはマシンを提供して, そっちはコアを提供する. この店じゃそういうルールだぜ.",
  	 	 	 	 	"アンタの装備がぶっ壊れちまう可能性があるかって？ そりゃもちろん. けどよ, リスクを冒すだけの価値は絶対あるぜ. 請け合いだ.",
  	 	 	 	 	"今日は何を強化するんだい？",
@@ -4605,7 +4605,7 @@
  	 	 	 	 	"今日は何を持ってきたんだ？ 見せてもらおうじゃないか.",
  	 	 	 	 	"ウチみたいな店はそう多くないと思うぜ.",
  	 	 	 	 	"今日は何を持ってきたんだ？",
- 	 	 	 	 	"バックパックがあれば, 見つけたお宝をザックザック持って帰れるってな. ...いかん, 俺もオヤジ臭くなってきたみたいだ. 忘れてくれ.",
+ 	 	 	 	 	"バックパックがあれば, 見つけたお宝をザックザック持って帰れるってな.",
  	 	 	 	 	"質より量を重視してるんでね.",
  	 	 	 	 	"交易するのかしないのか, どうなんだ？",
  	 	 	 	 	"全てのバッグは「『収納の』バッグ」だと思うんだが...どう思う？",
@@ -4619,7 +4619,7 @@
  	 	 	 	 	"持ち物を全部ポケットに突っ込む必要はないんだぜ.",
  	 	 	 	 	"さぁ取引だ. お前さんは中古のバッグをたくさん持ってくる, 俺は新しいバッグを渡す.",
  	 	 	 	 	"ふらついてるように見えるぞ. 荷物を背負いきれてないんじゃないか？",
- 	 	 	 	 	"メイ……今は''センパイ''だったな.話は裏で聞く.",
+ 	 	 	 	 	"メイ……今は''センパイ''だったな. 話は裏で聞く.",
  	 	 	 	 	"バッグが入り用なときはウチに来い. バックパックもある."
  	 	 	 	],
  	 	 	 	"eng": [
