--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -13,7 +13,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Chat",
+ 	 	 	"trans": "Kommunikation",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -405,7 +405,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "Erhöhe deine 3D-Druck Fähigkeiten, um leistungsfähigere Waffen zu erstellen, indem du mehr Caches druckst",
+ 	 	 	 	"trans": "Erhöhe deine 3D-Druck Fähigkeit, um leistungsfähigere Waffen zu erstellen, indem du mehr Caches druckst",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
@@ -3202,7 +3202,7 @@
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Erhöhter Schäden an Tier-Gangs. Erhalte mehr Schaden durch Aasgeier-Gang.",
+ 	 	 	 	"trans": "Erhöhter Schaden an Tier-Gang. Erhalte mehr Schaden durch Aasgeier-Gang.",
  	 	 	 	"eng": "deals increased damage to Animals gang. receives increased damage from Scavengers gang."
  	 	 	}
  	 	},
@@ -3212,7 +3212,7 @@
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Erhöhter Schäden an Voodoo-Boys-Gang. Erhalte mehr Schaden durch Tiere-Bande.",
+ 	 	 	 	"trans": "Erhöhter Schaden an Voodoo-Boys-Gang. Erhalte mehr Schaden durch Tier-Gang.",
  	 	 	 	"eng": "deals increased damage to Voodoo Boys gang. receives increased damage from Animals gang."
  	 	 	}
  	 	},
@@ -3222,7 +3222,7 @@
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Erhöhter Schäden an Aasgeier-Gang. Erhalte mehr Schaden durch Voodoo-Boys-Gang.",
+ 	 	 	 	"trans": "Erhöhter Schaden an Aasgeier-Gang. Erhalte mehr Schaden durch Voodoo-Boys-Gang.",
  	 	 	 	"eng": "deals increased damage to Scavengers gang. receives increased damage from Voodoo Boys gang."
  	 	 	}
  	 	}
@@ -4473,7 +4473,7 @@
  	 	 	 	"eng": "work in printing factory"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Verbessere deine 3D-Druck Fähigkeiten, ohne dafür Technikschrott zu verbrauchen. Dies hilft das Level deiner gedruckten Ausrüstung zu erhöhen.",
+ 	 	 	 	"trans": "Verbessere deine 3D-Druck Fähigkeit, ohne dafür Technikschrott zu verbrauchen. Dies hilft das Level deiner gedruckten Ausrüstung zu erhöhen.",
  	 	 	 	"eng": "Improve Printing Rank without sacrificing tech scrap, this may help to increase the level of your prints."
  	 	 	}
  	 	},
@@ -4503,7 +4503,7 @@
  	 	 	 	"eng": "Reverse Engineer Scraps"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Nimm Technikschrott auseinander, um deine 3D-Druck Fähigkeiten zu verbessern. \r\n        Dafür musst du etwas von deinem Technikschrott opfern.",
+ 	 	 	 	"trans": "Nimm Technikschrott auseinander, um deine 3D-Druck Fähigkeit zu verbessern. \r\n        Dafür musst du etwas von deinem Technikschrott opfern.",
  	 	 	 	"eng": "Reverse engineer tech scrap to improve your Print Rank. \r\n        You’ll need to sacrifice some of your tech scrap."
  	 	 	}
  	 	},
@@ -4622,11 +4622,11 @@
  	 	"requirement": {
  	 	 	"damage": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Schaden anrichten",
+ 	 	 	 	 	"trans": "Schaden zufügen",
  	 	 	 	 	"eng": "Deal damage"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Beschädigungsschaden an jedem Feind",
+ 	 	 	 	 	"trans": "Füge beliebigen Feinden Schaden zu",
  	 	 	 	 	"eng": "Deal damage to any enemy"
  	 	 	 	}
  	 	 	},
@@ -4636,7 +4636,7 @@
  	 	 	 	 	"eng": "Acquire Bitcoins"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Erhalte Bitcoins in irgendeiner Weise",
+ 	 	 	 	 	"trans": "Erhalte Bitcoins auf beliebige Weise",
  	 	 	 	 	"eng": "Acquire Bitcoins in any way"
  	 	 	 	}
  	 	 	},
@@ -4662,7 +4662,7 @@
  	 	 	},
  	 	 	"molecularPrint": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Druckausrüstung",
+ 	 	 	 	 	"trans": "3D-Druck-Ausrüstung",
  	 	 	 	 	"eng": "Print equipment"
  	 	 	 	},
  	 	 	 	"description": {
