--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Die Menschen in der Ukraine, Russland und die ganze Welt leiden, wegen dem Ehrgeiz eines Mannes. \\n Macht LIEBE EXPLOIT, KEINEN Krieg.",
+ 	 	 	 	"trans": "Die Menschen in der Ukraine, Russland und die ganze Welt leiden, wegen dem Ehrgeiz eines Mannes.\nMacht LIEBE EXPLOIT, KEINEN Krieg.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
