--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -798,7 +798,7 @@
  	 	 	 	"eng": "REDACTED"
  	 	 	},
  	 	 	"decoration1": {
- 	 	 	 	"trans": "confidentielle",
+ 	 	 	 	"trans": "confidentiel",
  	 	 	 	"eng": "confidential"
  	 	 	},
  	 	 	"decoration2": {
@@ -809,7 +809,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Fichier créé à ${date}",
+ 	 	 	 	"trans": "Fichier créé le ${date}",
  	 	 	 	"eng": "file created at ${date}"
  	 	 	},
  	 	 	"numOfMember": {
